# ishflow

./: .dockerignore  .env.local  .env.prod  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
docker/compose/: local.yml  prod.yaml
docker/entrypoints/local/: api.sh
docker/entrypoints/prod/: api.sh  certbot.sh
docker/images/local/: api.Dockerfile
docker/images/prod/: api.Dockerfile
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default-http-only.conf  default-https.conf  default.conf
docker/scripts/: init-letsencrypt.sh
public/assets/css/: custom.css
public/assets/js/: custom.js
src/: asgi.py  urls.py  wsgi.py
src/apps/accounts/: admin.py  apps.py  signals.py
src/apps/accounts/fixtures/: groups.json
src/apps/accounts/management/commands/: create_default_groups.py  create_test_users.py
src/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_userorm_is_staff.py  0004_alter_userorm_type.py  0005_alter_userorm_options.py
src/apps/accounts/models/: __init__.py  _manager.py  users.py
src/apps/accounts/schemas/: registration.py
src/apps/accounts/services/: login.py  password.py  registration.py  tokens.py
src/apps/applications/: admin.py  apps.py
src/apps/applications/migrations/: 0001_initial.py  0002_initial.py
src/apps/applications/models/: __init__.py  applications.py
src/apps/applications/services/: main.py
src/apps/candidates/: admin.py  apps.py  signals.py
src/apps/candidates/migrations/: 0001_initial.py  0002_alter_candidateorm_github_url_and_more.py
src/apps/candidates/models/: __init__.py  candidates.py
src/apps/companies/: admin.py  apps.py  signals.py
src/apps/companies/migrations/: 0001_initial.py  0002_alter_companyorm_logo.py  0003_remove_companyorm_company.py
src/apps/companies/models/: __init__.py  companies.py
src/apps/interviews/: admin.py  apps.py
src/apps/interviews/migrations/: 0001_initial.py  0002_alter_intervieworm_scheduled_at_and_more.py  0003_remove_intervieworm_interviewer_and_more.py
src/apps/interviews/models/: __init__.py  interviews.py
src/apps/interviews/services/: main.py
src/apps/jobs/: admin.py  apps.py
src/apps/jobs/migrations/: 0001_initial.py
src/apps/jobs/models/: __init__.py  jobs.py
src/apps/jobs/services/: job_crud.py  main.py
src/apps/notifications/: admin.py
src/apps/shared/: admin.py  apps.py
src/apps/shared/exceptions/: base.py  handler.py
src/apps/shared/management/commands/: createapp.py
src/apps/shared/models/: __init__.py  core.py  fields.py
src/apps/shared/utils/: __init__.py  datetime.py  hashing.py  humanization.py  phonenumber.py  random.py  string.py  validators.py
src/apps/shared/views/: __init__.py  generics.py  mixins.py  viewsets.py
src/routes/api/accounts/v1/: permissions.py  urls.py
src/routes/api/accounts/v1/serializers/: login.py  profile.py
src/routes/api/accounts/v1/views/: login.py  profile.py
src/routes/api/jobs/v1/: filters.py  permissions.py  urls.py
src/routes/api/jobs/v1/serializers/: __init__.py  jobs.py
src/routes/api/jobs/v1/views/: __init__.py  jobs.py
src/routes/web/accounts/: urls.py
src/routes/web/accounts/forms/: __init__.py  invitation.py  password.py  profile.py  registration.py
src/routes/web/accounts/views/: __init__.py  confirmation.py  employees.py  login.py  logout.py  profile.py  registration.py  set_password.py
src/routes/web/errors/: __init__.py  urls.py  views.py
src/routes/web/home/: urls.py  views.py
src/routes/web/interviews/: forms.py  urls.py
src/routes/web/interviews/views/: __init__.py  interviews.py
src/routes/web/jobs/: forms.py  urls.py
src/routes/web/jobs/views/: __init__.py  applications.py  jobs.py
src/settings/: __init__.py  django.py  environment.py
src/settings/contrib/: __init__.py  axes.py  cachalot.py  caches.py  cors.py  debug_toolbar.py  emails.py  gunicorn.py  logging.py  rest_framework.py  simple_jwt.py  spectacular.py  storages.py  unfold.py
src/templates/emails/: account_confirmation.html  application_status_update.html  employee_invitation.html
src/templates/errors/: 403.html  404.html  429.html  500.html
src/templates/pages/accounts/: login.html  register.html  set_password.html
src/templates/pages/accounts/employees/: invite.html  list.html
src/templates/pages/accounts/profile/: candidate.html  company.html  edit.html
src/templates/pages/interviews/: counter_propose.html  propose_slot.html  view_slots.html
src/templates/pages/jobs/: applicants.html  apply.html  detail.html  form.html  list.html  my_applications.html  my_jobs.html  received_applications.html
src/templates/pages/layouts/: base.html
src/templates/pages/views/: home.html
src/templates/shared/: humans.txt
src/templates/shared/components/: footer.html  navbar.html  profile_sidebar.html
tests/: __init__.py
